tests/baselines/reference/parserComputedPropertyName24.errors.txt
parserComputedPropertyName24.ts(2,10): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName24.ts (1 errors) ====
    class C {
        set [e](v) { }
             ~
!!! error TS2304: Cannot find name 'e'.
    }